# RMatrix

./: .gitignore  Cargo.toml  Pipfile  README.md  build.rs
benches/: analysis.ipynb  benchmark.ipynb  benchmark.rs  benchmarking.rs  create_matrices.py  main.rs  simple_benchmark.rs
benches/criterion_benchmarks/: basic_matrix.rs  ndarray_matrix.rs
benches/matrices/: basic_matrix.rs  benchmark_data.rs  mod.rs  ndarray_matrix.rs
benches/python_helper/: create_matrices.py  numpy_benchmark.ipynb
benchmarking/: benchmark.rs  benchmarking.rs
examples/: basic_matrix.rs
experiments/: benchmark.ipynb
src/: lib.rs
src/matrices/: basic_matrix.rs  blas_matrix.rs  blocked_matrix.rs  mod.rs  multithread_aligned_matrix.rs  multithread_matrix.rs  ndarray_matrix.rs  one_d_vec_matrix.rs  transposed_view_matrix.rs
tests/: basic_matrix.rs  blas_matrix.rs  blocked_matrix.rs  multithread_matirx.rs  multithread_matrix.rs  ndarray_matrix.rs  one_d_vec_matrix.rs  test_functions.rs  tests.rs  transposed_view_matrix.rs
